--- a/web/megaquizz.css
+++ b/web/megaquizz.css
@@ -18,10 +18,12 @@ h1, p {
   position: relative;
   border: 1px solid #ccc;
   background-color: #fff;
+  text-align: center;
+  padding-top: 50px;
 }
 
-#sample_text_id {
-  font-size: 24pt;
-  text-align: center;
-  margin-top: 140px;
+button {
+  width: 200px;
+  height: 50px;
+  margin-top: 2px;
 }
